add get user atlases functionality
