# Backend/src/API/REST/routes/atlas/atlasRouter.ts
@@ -64,6 +64,60 @@ const get_atlas = (): Router => {
   return router;
 };
 
+const get_user_atlases = (): Router => {
+  let router = express.Router();
+  router.get("/youratlases", validationMdw, optional_auth(), async (req: any, res) => {
+    try {
+      const loggedInUserId = req.user_id; // Assuming req.user.id contains the logged-in user's ID
+
+      const atlases = await AtlasService.getAllAtlases();
+      // check if the atlases are present in the GCP bucket
+      // Delete the atlas from GCP
+      const storage = new Storage({
+        projectId: process.env.GCP_PROJECT_ID,
+        credentials: {
+          client_email: process.env.GCP_CLIENT_EMAIL,
+          private_key: process.env.GCP_PRIVATE_KEY,
+          client_id: process.env.GCP_CLIENT_ID,
+        },
+
+      });
+      const bucketName = process.env.S3_BUCKET_NAME;
+      
+
+      const atlases_filtered = await Promise.all(atlases.map(async (atlas) => {
+        const fileName = `atlas/${atlas._id}/data.h5ad`;
+        const file = storage.bucket(bucketName).file(fileName);
+        const [exists] = await file.exists();
+        
+        if (!exists) {
+          return null; // Return null for non-existing atlases
+        }
+      
+        return atlas; // Return the atlas object for existing atlases
+      }));
+      
+      const filteredAtlases1 = atlases_filtered.filter(atlas => atlas !== null);
+
+      // filter out private atlases
+      // Check for logged-in user
+      
+      // Get atlases uploaded by user
+      const filteredAtlases = filteredAtlases1.filter(atlas => {
+          loggedInUserId && atlas.uploadedBy === loggedInUserId;
+          });
+
+      return res.status(200).json(filteredAtlases);
+    } catch (err) {
+      console.error("Error accessing the atlases!");
+      console.error(JSON.stringify(err));
+      console.error(err);
+      return res.status(500).send("Unable to access the atlases.");
+    }
+  });
+  return router;
+};
+
 const get_atlas_visualization = (): Router => {
   let router = express.Router();
 
@@ -666,4 +720,4 @@ const delete_atlas = (): Router => {
 };
 
 
-export { get_atlas, get_atlas_visualization, get_allAtlases, upload_atlas, edit_atlas, delete_atlas, get_scvi_atlases, post_anndata_args, trigger_cloud_run_job };
+export { get_atlas, get_user_atlases, get_atlas_visualization, get_allAtlases, upload_atlas, edit_atlas, delete_atlas, get_scvi_atlases, post_anndata_args, trigger_cloud_run_job };
